--- a/river.html
+++ b/river.html
@@ -53,9 +53,48 @@
 	<link rel="shortcut icon" href="./css/images/favicon.ico">
 	<link rel="stylesheet" href="css/Spinner.css">
   	<title>Calhoun's RV Retreat</title> 
+  	<style type="text/css">
+  		ul {
+		  list-style-type: none;
+		  margin: 0;
+		  padding: 0;
+		  overflow: hidden;
+		  background-color: #333;
+		}
+
+		li:first-child{
+			float: left;
+		}
+
+		li {
+		  float: right;
+		}
+
+		li a {
+		  display: block;
+		  color: white;
+		  text-align: center;
+		  padding: 14px 16px;
+		  text-decoration: none;
+		}
+
+		li a:hover {
+		  background-color: #111;
+		}
+  	</style>
 
 </head>
 <body>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="/index.html"> Home</a></li>
+				<li><a href="/river.html"> River Level</a></li>
+				<li><a href="/rates.html"> Rates</a></li>
+				<li><a href="/contact.html"> Contact</a><li>
+			</ul>
+		</nav>	
+	</header>
 	<h1> Guadalupe River Level at Tivoli </h1>
 	<div id="riverLevel">
 		
