--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 	</script>
 	<meta name="description" content="RV Park">
 	<meta name="author" content="Jason Sinn">
-	<!--<link rel="shortcut icon" href="./css/images/favicon.ico">-->
+	<link rel="shortcut icon" href="./css/favicon.ico">
   	<title>Calhoun's RV Retreat</title> 
   	<style type="text/css">
-  		img {
+  		#cover {
 		  width: 100%;
 		  height: auto;
 		}
@@ -86,6 +86,15 @@
 		  background-color: #111;
 		}
 
+		p {
+			text-indent: 30px;
+		}
+
+		#logo {
+			width: 100%;
+			max-height: 70px;	
+		}
+
 		#navbar {
 		  overflow: hidden;
 		  background-color: #333;
@@ -108,7 +117,10 @@
   	
 </head>
 <body>
-	<h1> Calhoun's Riverside RV Retreat </h1>
+	<div id="logo">
+	<img src="./css/circleC.png"/>
+	<h1 style="display: inline;font-size: 3vh"> Calhoun's Riverside RV Retreat </h1>
+	</div>
 	<header>
 		<nav id="navbar">
 			<ul>
@@ -121,14 +133,34 @@
 	</header>
 
 	<div class="content">
-		<img src="./css/coverImage.jpg"/>
+		<img id="cover" src="./css/coverImage.jpg"/>
  		
  		<h2> We are currently updating out website </h2>
  		<h2> Phone Number 361 550 7536 </h2>
  		<h2> Email calhoun@calhounsrvretreats.com </h2>
  		<h2> Address 125 Haeber Ln, Tivoli, TX 77990 </h2>
     	<br/>
-    	<!--<a href="/reservations.html"> Reservations Page </a>-->
+    	<h2>Your Front Row Seat to a Texas Gem, </h2>
+            
+            <h2>
+            The Guadalupe River
+            </h2>
+            <p>
+            Calhoun’s Riverside RV Retreat offers visitors the best of the Guadulupe River. Just outside Tivoli, Texas, and a short drive from Victoria, Port O'Connor and Point Comfort, Calhoun’s is centrally located and filled 
+            with wildlife. Once you see it you’ll know: Calhoun’s is unlike any other Texas RV park. Here, visitors can take advantage of some of the best fishing, bow fishing, boating, and canoing and kayaking in Texas, or simply enjoy the river from their RV! Just 17 miles from Port Lavaca, 30 miles from Rockport and Victoria, Calhoun’s offers a peaceful RV camping experience nestled beneath giant oak trees.
+            </p>
+            <p>
+            Forget trying to get a spot on the bay, Calhoun’s is just 5 short miles by boat from the San Antonio Bay. The river is plenty deep enough to accommodate larger boats, and with Calhoun’s private boat ramp, getting there is easy. Located in the center of the Crescent Coast, visitors can boat their way to the Gulf of Mexico, while enjoying an abundancy of wildlife.
+            </p>
+            <p>
+            Calhoun’s offers more than a little something for everyone. Whether you enjoy deer, water fowel or feral hog hunting, this is a sportsmen’s paradise. If you’re a Winter Texan looking for an alternative to the crowds, Calhoun’s is a unique Texas RV Park centrally located to the region’s historic and resort towns. Tired of RV parks without a tree in sight? Wanting a little room to get comfortable? Seeking a little adventure on the river? Calhoun’s is a different kind of place. Paddle down the river one day, take a drive to Corpus Christi the next and enjoy all the variety in this quiet corner of the Crescent Coast.
+            </p>
+            <p>
+            Owned and operated by a U.S. Army veteran, Calhoun’s is all about providing sportsmen, Winter Texans and families with a great place to experience the best of Texas!
+            </p>
+            <p>
+            Need lodging? We have cabins!
+            </p>
 	</div>	
 	<footer>
 		
