added links for contact

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-	<!--//waterservices.usgs.gov/nwis/iv/?format=json&sites=08188800&period=P3DT12H&parameterCd=00065&siteStatus=all-->
  	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
@@ -20,9 +19,9 @@
 	    ],
 	  "telephone": "(361) 550-7536",
 	  "url": "https://www.calhounsriversidervretreat.com",
-	  "image": "https://www.calhounsriversidervretreat.com/css/images/circleC.png",
+	  "image": "https://www.calhounsriversidervretreat.com/css/circleC.png",
 	  "priceRange": "$$",
-	  "hasMap": 		"https://www.google.com/maps/place/125+Haeber+Ln,+Tivoli,+TX+77990/@28.4767777,-96.8629815,17z/data=!3m1!4b1!4m5!3m4!1s0x8669d8eb4b1185b9:0xc2267a66b6d7b93c!8m2!3d28.4767777!4d-96.8607928",
+	  "hasMap": "https://www.google.com/maps/place/Calhoun's+Riverside+RV+Retreat/@28.4817324,-96.8747618,14z/data=!4m12!1m6!3m5!1s0x8669d894b34ff8ff:0xf1a011cae1f0b383!2sCalhoun's+Riverside+RV+Retreat!8m2!3d28.476942!4d-96.860943!3m4!1s0x8669d894b34ff8ff:0xf1a011cae1f0b383!8m2!3d28.476942!4d-96.860943",
 	  "checkinTime": "14:00",
 	  "checkoutTime": "12:00",
 	  "address": {
@@ -34,8 +33,8 @@
 	  },
 	  "aggregateRating": {
 	    "@type": "AggregateRating",
-	    "ratingValue": "4.5",
-	    "reviewCount": "27"
+	    "ratingValue": "4.3",
+	    "reviewCount": "35"
 	  },
 	   "geo": {
 	    "@type": [
@@ -63,7 +62,7 @@
 		  margin: 0;
 		  padding: 0;
 		  overflow: hidden;
-		  background-color: #333;
+		  background-color: blue;
 		}
 
 		li:first-child{
@@ -83,7 +82,7 @@
 		}
 
 		li a:hover {
-		  background-color: #111;
+		  background-color: rgb(0, 188, 212);
 		}
 
 		p {
@@ -97,7 +96,7 @@
 
 		#navbar {
 		  overflow: hidden;
-		  background-color: #333;
+		  background-color:blue;
 		}
 
 		.content {
@@ -128,17 +127,18 @@
 				<li><a href="/river.html"> River Level</a></li>
 				<li><a href="/rates.html"> Rates</a></li>
 				<li><a href="/contact.html"> Contact</a><li>
+				<li><a href="tel:361-550-7536"> Call Now 361-550-7536</a> </li>
 			</ul>
 		</nav>	
 	</header>
 
 	<div class="content">
 		<img id="cover" src="./css/coverImage.jpg"/>
- 		
- 		<h2> We are currently updating out website </h2>
- 		<h2> Phone Number 361 550 7536 </h2>
- 		<h2> Email calhoun@calhounsrvretreats.com </h2>
- 		<h2> Address 125 Haeber Ln, Tivoli, TX 77990 </h2>
+ 		<address>
+ 		<h2> Phone Number: <a href="tel:361-550-7536"> 361-550-7536</a> </h2>
+ 		<h2> Email: <a href="mailto:calhoun@calhounsrvretreats.com"> calhoun@calhounsrvretreats.com</a> </h2>
+ 		<h2> Address: <a href="https://www.google.com/maps/place/Calhoun's+Riverside+RV+Retreat/@28.4817324,-96.8747618,14z/data=!4m12!1m6!3m5!1s0x8669d894b34ff8ff:0xf1a011cae1f0b383!2sCalhoun's+Riverside+RV+Retreat!8m2!3d28.476942!4d-96.860943!3m4!1s0x8669d894b34ff8ff:0xf1a011cae1f0b383!8m2!3d28.476942!4d-96.860943">125 Haeber Ln, Tivoli, TX 77990 </a></h2>
+ 		</address>
     	<br/>
     	<h2>Your Front Row Seat to a Texas Gem, </h2>
             
