--- a/river.html
+++ b/river.html
@@ -22,7 +22,7 @@
 	  "url": "https://www.calhounsriversidervretreat.com",
 	  "image": "https://www.calhounsriversidervretreat.com/css/images/circleC.png",
 	  "priceRange": "$$",
-	  "hasMap": 		"https://www.google.com/maps/place/125+Haeber+Ln,+Tivoli,+TX+77990/@28.4767777,-96.8629815,17z/data=!3m1!4b1!4m5!3m4!1s0x8669d8eb4b1185b9:0xc2267a66b6d7b93c!8m2!3d28.4767777!4d-96.8607928",
+	  "hasMap": "https://www.google.com/maps/place/Calhoun's+Riverside+RV+Retreat/@28.4817324,-96.8747618,14z/data=!4m12!1m6!3m5!1s0x8669d894b34ff8ff:0xf1a011cae1f0b383!2sCalhoun's+Riverside+RV+Retreat!8m2!3d28.476942!4d-96.860943!3m4!1s0x8669d894b34ff8ff:0xf1a011cae1f0b383!8m2!3d28.476942!4d-96.860943",
 	  "checkinTime": "14:00",
 	  "checkoutTime": "12:00",
 	  "address": {
@@ -34,8 +34,8 @@
 	  },
 	  "aggregateRating": {
 	    "@type": "AggregateRating",
-	    "ratingValue": "4.5",
-	    "reviewCount": "27"
+	    "ratingValue": "4.3",
+	    "reviewCount": "35"
 	  },
 	   "geo": {
 	    "@type": [
@@ -59,7 +59,7 @@
 		  margin: 0;
 		  padding: 0;
 		  overflow: hidden;
-		  background-color: #333;
+		  background-color: blue;
 		}
 
 		li:first-child{
