--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-	<!--//waterservices.usgs.gov/nwis/iv/?format=json&sites=08188800&period=P3DT12H&parameterCd=00065&siteStatus=all-->
  	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
@@ -20,9 +19,9 @@
 	    ],
 	  "telephone": "(361) 550-7536",
 	  "url": "https://www.calhounsriversidervretreat.com",
-	  "image": "https://www.calhounsriversidervretreat.com/css/images/circleC.png",
+	  "image": "https://www.calhounsriversidervretreat.com/css/circleC.png",
 	  "priceRange": "$$",
-	  "hasMap": 		"https://www.google.com/maps/place/125+Haeber+Ln,+Tivoli,+TX+77990/@28.4767777,-96.8629815,17z/data=!3m1!4b1!4m5!3m4!1s0x8669d8eb4b1185b9:0xc2267a66b6d7b93c!8m2!3d28.4767777!4d-96.8607928",
+	  "hasMap": "https://www.google.com/maps/place/Calhoun's+Riverside+RV+Retreat/@28.4817324,-96.8747618,14z/data=!4m12!1m6!3m5!1s0x8669d894b34ff8ff:0xf1a011cae1f0b383!2sCalhoun's+Riverside+RV+Retreat!8m2!3d28.476942!4d-96.860943!3m4!1s0x8669d894b34ff8ff:0xf1a011cae1f0b383!8m2!3d28.476942!4d-96.860943",
 	  "checkinTime": "14:00",
 	  "checkoutTime": "12:00",
 	  "address": {
@@ -34,8 +33,8 @@
 	  },
 	  "aggregateRating": {
 	    "@type": "AggregateRating",
-	    "ratingValue": "4.5",
-	    "reviewCount": "27"
+	    "ratingValue": "4.3",
+	    "reviewCount": "35"
 	  },
 	   "geo": {
 	    "@type": [
@@ -50,7 +49,7 @@
 	</script>
 	<meta name="description" content="RV Park">
 	<meta name="author" content="Jason Sinn">
-	<!--<link rel="shortcut icon" href="./css/images/favicon.ico">-->
+	<link rel="shortcut icon" href="./css/favicon.ico">
   	<title>Calhoun's RV Retreat</title> 
   	<style type="text/css">
   		ul {
@@ -58,7 +57,7 @@
 		  margin: 0;
 		  padding: 0;
 		  overflow: hidden;
-		  background-color: #333;
+		  background-color: blue;
 		}
 
 		li:first-child{
@@ -91,12 +90,18 @@
 				<li><a href="/river.html"> River Level</a></li>
 				<li><a href="/rates.html"> Rates</a></li>
 				<li><a href="/contact.html"> Contact</a><li>
+				<li><a href="tel:361-550-7536"> Call Now 361-550-7536</a> </li>
 			</ul>
 		</nav>	
 	</header>
  		<h1> Contact </h1>
- 		<span>&#9990;</span>
- 		<span>&#9993;</span>
+ 		<!--<span>&#9990;</span>
+ 		<span>&#9993;</span>-->
+ 		<address>
+ 		<h2> Phone Number: <a href="tel:361-550-7536"> 361-550-7536</a> </h2>
+ 		<h2> Email: <a href="mailto:calhoun@calhounsrvretreats.com"> calhoun@calhounsrvretreats.com</a> </h2>
+ 		<h2> Address: <a href="https://www.google.com/maps/place/Calhoun's+Riverside+RV+Retreat/@28.4817324,-96.8747618,14z/data=!4m12!1m6!3m5!1s0x8669d894b34ff8ff:0xf1a011cae1f0b383!2sCalhoun's+Riverside+RV+Retreat!8m2!3d28.476942!4d-96.860943!3m4!1s0x8669d894b34ff8ff:0xf1a011cae1f0b383!8m2!3d28.476942!4d-96.860943">125 Haeber Ln, Tivoli, TX 77990 </a></h2>
+ 		</address>
 	<footer>
 		
 	</footer>
